--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
     <header class="header">
       <img src="./images/header-logo.svg" alt="логотип" class="header__logo" />
       <div class="header__links">
-        <a href="" class="header__lang-link">Ru</a>
-        <a href="" class="header__lang-link">En</a>
+        <a href="" class="header__lang-link header__lang-link_underline_on">
+          Ru
+        </a>
+        <a href="" class="header__lang-link">
+          En
+        </a>
       </div>
     </header>
     <section class="lead">
@@ -28,6 +32,52 @@
       <span class="lead__caption">
         ваша полка — верхняя
       </span>
+    </section>
+    <section class="intro">
+      <h2 class="intro__title">
+        Чего мы там
+        не видели?
+      </h2>
+      <article class="intro__text">
+        По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной
+        стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга,
+        густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на
+        счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая
+        взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали
+        и описали некоторые интересные места, достойные вашего отпуска.
+      </article>
+      <ul class="intro__list">
+        <li>
+          Часовых поясов
+          <span class="intro__number">
+            11
+          </span>
+        <li>
+          Объектов природного наследия ЮНЕСКО
+          <span class="intro__number">
+            12
+          </span>
+        </li>
+        <li>
+          Объектов культурного наследия ЮНЕСКО
+          <span class="intro__number">
+            16
+          </span>
+        </li>
+        <li>
+          Природных заповедников
+          <span class="intro__number">
+            105
+          </span>
+        </li>
+        <li>
+          Аэропортов
+          <span class="intro__number">
+            241
+          </span>
+        </li>
+        </li>
+      </ul>
     </section>
   </div>
 </body>
