--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@
   <link rel="stylesheet" href="./blocks/pages/index.css" />
 </head>
 
-<body>
-  <div class="page">
-    <header class="header">
-      <img src="./images/header-logo.svg" alt="логотип" class="header__logo" />
-      <div class="header__links">
-        <a href="" class="header__lang-link header__lang-link_active">
-          Ru
-        </a>
-        <a href="" class="header__lang-link header__lang-link_active">
-          En
-        </a>
-      </div>
-    </header>
+<body class="page">
+  <header class="header">
+    <img src="./images/header-logo.svg" alt="логотип" class="header__logo" />
+    <div class="header__links">
+      <a href="" class="header__lang-link header__lang-link_active">
+        Ru
+      </a>
+      <a href="" class="header__lang-link header__lang-link_active">
+        En
+      </a>
+    </div>
+  </header>
+  <main>
     <section class="lead">
-      <h1 class="lead__title">
-        Путешествия по России
+      <h1 class="lead__title">Путешествия
+        по России
       </h1>
-      <p class="lead__subtitle">
-        Настоящая страна не в выпусках новостей, а здесь.
+      <p class="lead__subtitle">Настоящая страна не в выпусках
+        новостей, а здесь.
       </p>
       <img src="./images/lead-polka.jpg" alt="постельное место" class="lead__image" />
       <span class="lead__caption">
@@ -43,7 +43,8 @@
         стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга,
         густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на
         счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая
-        взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали
+        взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы
+        выбрали
         и описали некоторые интересные места, достойные вашего отпуска.
       </article>
       <ul class="intro__list">
@@ -52,6 +53,7 @@
           <span class="intro__number">
             11
           </span>
+        </li>
         <li>
           Объектов природного наследия ЮНЕСКО
           <span class="intro__number">
@@ -76,7 +78,6 @@
             241
           </span>
         </li>
-        </li>
       </ul>
     </section>
     <section class="photo-grid">
@@ -95,8 +96,8 @@
     </section>
     <section class="places">
       <div class="place">
-        <h3 class="place__title">
-          Куршская коса
+        <h3 class="place__title">Куршская
+          коса
         </h3>
         <div class="place__website">
           <p class="place__url-heading">
@@ -109,12 +110,14 @@
         <img src="./images/place-kosa.jpg" alt="Куршская коса" class="place__image" />
         <div class="place__paragraph-container">
           <p class="place__paragraph">
-            Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с
+            Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива
+            с
             одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю
             российского анклава.
           </p>
           <p class="place__paragraph">
-            На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству —
+            На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству
+            —
             самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов.
             Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.
           </p>
@@ -139,7 +142,8 @@
             Ледовитый океан, прикидывающийся Баренцевым морем.
           </p>
           <p class="place__paragraph">
-            Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово
+            Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно,
+            слово
             «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались
             пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта
             увидеть северное сияние начинает сбываться с билетом в Мурманск.
@@ -162,7 +166,8 @@
         <div class="place__paragraph-container">
           <p class="place__paragraph">
             Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, вы увидите
-            склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться
+            склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете
+            познакомиться
             с
             невидимым чудом здешних мест — горным воздухом.
           </p>
@@ -189,12 +194,14 @@
         <img src="./images/place-winter-baikal.jpg" alt="лед Байкала" class="place__image" />
         <div class="place__paragraph-container">
           <p class="place__paragraph">
-            Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной
+            Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник
+            пресной
             воды и одно из красивейших мест в России.
           </p>
           <p class="place__paragraph">
             Конечно, это всё так. Но Байкал ещё идеальное место для  соревнований по скийорингу. Это такой вид спорта,
-            когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В
+            когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду.
+            В
             марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.
           </p>
         </div>
@@ -215,9 +222,11 @@
         <p class="place__paragraph">
           Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее
           Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых
-          болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу,
+          болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому
+          существу,
           видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь
-          тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто
+          тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали,
+          кто
           тут хозяин.
         </p>
       </div>
@@ -233,39 +242,39 @@
         </p>
       </a>
     </section>
-    <footer class="footer">
-      <ul class="footer__links">
-        <li>
-          <a href="https://yandex.ru/maps" class="footer__link">
-            Карты
-          </a>
-        </li>
-        <li>
-          <a href="https://yandex.ru/pogoda" class="footer__link">
-            Погода
-          </a>
-        </li>
-        <li>
-          <a href="https://rasp.yandex.ru" class="footer__link">
-            Расписание
-          </a>
-        </li>
-        <li>
-          <a href="https://calendar.yandex.ru" class="footer__link">
-            Календарь
-          </a>
-        </li>
-        <li>
-          <a href="https://travel.yandex.ru" class="footer__link">
-            Путешествия
-          </a>
-        </li>
-      </ul>
-      <p class="footer__copyright">
-        &copy; 2022. Семенов Данила
-      </p>
-    </footer>
-  </div>
+  </main>
+  <footer class="footer">
+    <ul class="footer__links">
+      <li>
+        <a href="https://yandex.ru/maps" class="footer__link">
+          Карты
+        </a>
+      </li>
+      <li>
+        <a href="https://yandex.ru/pogoda" class="footer__link">
+          Погода
+        </a>
+      </li>
+      <li>
+        <a href="https://rasp.yandex.ru" class="footer__link">
+          Расписание
+        </a>
+      </li>
+      <li>
+        <a href="https://calendar.yandex.ru" class="footer__link">
+          Календарь
+        </a>
+      </li>
+      <li>
+        <a href="https://travel.yandex.ru" class="footer__link">
+          Путешествия
+        </a>
+      </li>
+    </ul>
+    <p class="footer__copyright">
+      &copy; 2022. Семенов Данила
+    </p>
+  </footer>
 </body>
 
 </html>
