--- a/index.html
+++ b/index.html
@@ -5,20 +5,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Путешествия по России</title>
-  <link rel="stylesheet" href="./blocks/pages/index.css" />
+  <link rel="stylesheet" href="./pages/index.css" />
 </head>
 
 <body class="page">
   <header class="header">
     <img src="./images/header-logo.svg" alt="логотип" class="header__logo" />
-    <div class="header__links">
-      <a href="" class="header__lang-link header__lang-link_active">
-        Ru
-      </a>
-      <a href="" class="header__lang-link header__lang-link_active">
-        En
-      </a>
-    </div>
+    <ul class="header__links">
+      <li>
+        <a href="#" class="header__lang-link header__lang-link_active">
+          Ru
+        </a>
+      </li>
+      <li>
+        <a href="#" class="header__lang-link">
+          En
+        </a>
+      </li>
+    </ul>
   </header>
   <main>
     <section class="lead">
@@ -28,17 +32,19 @@
       <p class="lead__subtitle">Настоящая страна не в выпусках
         новостей, а здесь.
       </p>
-      <img src="./images/lead-polka.jpg" alt="постельное место" class="lead__image" />
-      <span class="lead__caption">
-        ваша полка — верхняя
-      </span>
+      <figure class="lead__figure">
+        <img src="./images/lead-polka.jpg" alt="постельное место" class="lead__image" />
+        <figcaption class="lead__caption">
+          ваша полка — верхняя
+        </figcaption>
+      </figure>
     </section>
     <section class="intro">
       <h2 class="intro__title">
         Чего мы там
         не видели?
       </h2>
-      <article class="intro__text">
+      <p class="intro__text">
         По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной
         стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга,
         густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на
@@ -46,7 +52,7 @@
         взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы
         выбрали
         и описали некоторые интересные места, достойные вашего отпуска.
-      </article>
+      </p>
       <ul class="intro__list">
         <li>
           Часовых поясов
@@ -80,25 +86,51 @@
         </li>
       </ul>
     </section>
-    <section class="photo-grid">
-      <img src="./images/photo-grid-train.jpg" alt="поезд" class="photo-grid__item" />
-      <img src="./images/photo-grid-atharva-tulsi.jpg" alt="снежные горы" class="photo-grid__item" />
-      <img src="./images/photo-grid-tuman.jpg" alt="туман в поле" class="photo-grid__item" />
-      <img src="./images/photo-grid-sochi.jpg" alt="деревья в тумане" class="photo-grid__item" />
-      <img src="./images/photo-grid-arisa.jpg" alt="колесо машины" class="photo-grid__item" />
-      <img src="./images/photo-grid-baikal.jpg" alt="пляж" class="photo-grid__item" />
-      <img src="./images/photo-grid-elbrus.jpg" alt="Эльбрус" class="photo-grid__item" />
-      <img src="./images/photo-grid-kondratiev.jpg" alt="пешеходный знак" class="photo-grid__item" />
-      <img src="./images/photo-grid-kamchatka-1.jpg" alt="горы в тумане" class="photo-grid__item" />
-      <img src="./images/photo-grid-kamchatka-2.jpg" alt="гора на Камчатке" class="photo-grid__item" />
-      <img src="./images/photo-grid-baikal-2.jpg" alt="Байкал" class="photo-grid__item" />
-      <img src="./images/photo-grid-ergaki.jpg" alt="горы в тумане" class="photo-grid__item" />
+    <section>
+      <ul class="photo-grid">
+        <li>
+          <img src="./images/photo-grid-train.jpg" alt="поезд" class="photo-grid__item" />
+        </li>
+        <li>
+          <img src="./images/photo-grid-atharva-tulsi.jpg" alt="снежные горы" class="photo-grid__item" />
+        </li>
+        <li>
+          <img src="./images/photo-grid-tuman.jpg" alt="туман в поле" class="photo-grid__item" />
+        </li>
+        <li>
+          <img src="./images/photo-grid-sochi.jpg" alt="деревья в тумане" class="photo-grid__item" />
+        </li>
+        <li>
+          <img src="./images/photo-grid-arisa.jpg" alt="колесо машины" class="photo-grid__item" />
+        </li>
+        <li>
+          <img src="./images/photo-grid-baikal.jpg" alt="пляж" class="photo-grid__item" />
+        </li>
+        <li>
+          <img src="./images/photo-grid-elbrus.jpg" alt="Эльбрус" class="photo-grid__item" />
+        </li>
+        <li>
+          <img src="./images/photo-grid-kondratiev.jpg" alt="пешеходный знак" class="photo-grid__item" />
+        </li>
+        <li>
+          <img src="./images/photo-grid-kamchatka-1.jpg" alt="горы в тумане" class="photo-grid__item" />
+        </li>
+        <li>
+          <img src="./images/photo-grid-kamchatka-2.jpg" alt="гора на Камчатке" class="photo-grid__item" />
+        </li>
+        <li>
+          <img src="./images/photo-grid-baikal-2.jpg" alt="Байкал" class="photo-grid__item" />
+        </li>
+        <li>
+          <img src="./images/photo-grid-ergaki.jpg" alt="горы в тумане" class="photo-grid__item" />
+        </li>
+      </ul>
     </section>
-    <section class="places">
+    <article class="places">
       <div class="place">
-        <h3 class="place__title">Куршская
+        <h2 class="place__title">Куршская
           коса
-        </h3>
+        </h2>
         <div class="place__website">
           <p class="place__url-heading">
             URL
@@ -124,9 +156,9 @@
         </div>
       </div>
       <div class="place">
-        <h3 class="place__title">
+        <h2 class="place__title">
           Кольский
-        </h3>
+        </h2>
         <div class="place__website">
           <p class="place__url-heading">
             URL
@@ -151,9 +183,9 @@
         </div>
       </div>
       <div class="place">
-        <h3 class="place__title">
+        <h2 class="place__title">
           Алтай
-        </h3>
+        </h2>
         <div class="place__website">
           <p class="place__url-heading">
             URL
@@ -180,9 +212,9 @@
         </div>
       </div>
       <div class="place">
-        <h3 class="place__title">
+        <h2 class="place__title">
           Зимний Байкал
-        </h3>
+        </h2>
         <div class="place__website">
           <p class="place__url-heading">
             URL
@@ -207,9 +239,9 @@
         </div>
       </div>
       <div class="place">
-        <h3 class="place__title">
+        <h2 class="place__title">
           Карелия
-        </h3>
+        </h2>
         <div class="place__website">
           <p class="place__url-heading">
             URL
@@ -230,47 +262,50 @@
           тут хозяин.
         </p>
       </div>
-    </section>
+    </article>
     <section class="cover">
       <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link">
-        <h2 class="cover__title">До Байкала
-          «на собаках»
+        <h2 class="cover__title">
+          До&nbsp;Байкала
+          «на&nbsp;собаках»
         </h2>
         <p class="cover__subtitle">По мотивам учебной темы
-          о Транссибе — путешествие
+          о Транссибе —&nbsp;путешествие
           от столицы до Байкала на электричках.
         </p>
       </a>
     </section>
   </main>
   <footer class="footer">
-    <ul class="footer__links">
-      <li>
-        <a href="https://yandex.ru/maps" class="footer__link">
-          Карты
-        </a>
-      </li>
-      <li>
-        <a href="https://yandex.ru/pogoda" class="footer__link">
-          Погода
-        </a>
-      </li>
-      <li>
-        <a href="https://rasp.yandex.ru" class="footer__link">
-          Расписание
-        </a>
-      </li>
-      <li>
-        <a href="https://calendar.yandex.ru" class="footer__link">
-          Календарь
-        </a>
-      </li>
-      <li>
-        <a href="https://travel.yandex.ru" class="footer__link">
-          Путешествия
-        </a>
-      </li>
-    </ul>
+    <nav>
+      <ul class="footer__links">
+        <li>
+          <a href="https://yandex.ru/maps" class="footer__link">
+            Карты
+          </a>
+        </li>
+        <li>
+          <a href="https://yandex.ru/pogoda" class="footer__link">
+            Погода
+          </a>
+        </li>
+        <li>
+          <a href="https://rasp.yandex.ru" class="footer__link">
+            Расписание
+          </a>
+        </li>
+        <li>
+          <a href="https://calendar.yandex.ru" class="footer__link">
+            Календарь
+          </a>
+        </li>
+        <li>
+          <a href="https://travel.yandex.ru" class="footer__link">
+            Путешествия
+          </a>
+        </li>
+      </ul>
+    </nav>
     <p class="footer__copyright">
       &copy; 2022. Семенов Данила
     </p>
