--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
         </li>
       </ul>
     </section>
-    <section>
-      <ul class="photo-grid">
+    <section class="photo-grid">
+      <ul class="photo-grid__items">
         <li>
           <img src="./images/photo-grid-train.jpg" alt="поезд" class="photo-grid__item" />
         </li>
@@ -126,8 +126,8 @@
         </li>
       </ul>
     </section>
-    <article class="places">
-      <div class="place">
+    <section class="places">
+      <article class="place">
         <h2 class="place__title">Куршская
           коса
         </h2>
@@ -154,8 +154,8 @@
             Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.
           </p>
         </div>
-      </div>
-      <div class="place">
+      </article>
+      <article class="place">
         <h2 class="place__title">
           Кольский
         </h2>
@@ -181,8 +181,8 @@
             увидеть северное сияние начинает сбываться с билетом в Мурманск.
           </p>
         </div>
-      </div>
-      <div class="place">
+      </article>
+      <article class="place">
         <h2 class="place__title">
           Алтай
         </h2>
@@ -210,8 +210,8 @@
             манулы — тоже обитатели Алтайского края.
           </p>
         </div>
-      </div>
-      <div class="place">
+      </article>
+      <article class="place">
         <h2 class="place__title">
           Зимний Байкал
         </h2>
@@ -237,8 +237,8 @@
             марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.
           </p>
         </div>
-      </div>
-      <div class="place">
+      </article>
+      <article class="place">
         <h2 class="place__title">
           Карелия
         </h2>
@@ -261,8 +261,8 @@
           кто
           тут хозяин.
         </p>
-      </div>
-    </article>
+      </article>
+    </section>
     <section class="cover">
       <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link">
         <h2 class="cover__title">
